fix: fixed projects connections

--- a/WeMovieSync/WeMovieSync.API/appsettings.json
+++ b/WeMovieSync/WeMovieSync.API/appsettings.json
@@ -7,15 +7,13 @@
   },
   "AllowedHosts": "*",
 
-
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=we&moviedb;Username=postgres;Password=123;Trust Server Certificate=true"
+    "DefaultConnection": "Host=localhost;Port=5433;Database=we&moviedb;Username=postgres;Password=123"
   },
 
   "Jwt": {
-    "Key": "твой_очень_длинный_секрет_минимум_32_символа_лучше_64",
-    "Issuer": "http://localhost:5058",
-    "Audience": "http://localhost:5058"
+    "Key": "super_long_and_random_secret_key_for_jwt_signing_which_should_be_at_least_64_characters_long_but_better_128_or_more_1234567890abcdef1234567890abcdef",
+    "Issuer": "http://localhost:5057",
+    "Audience": "http://localhost:5057"
   }
-
 }
