--- a/WeMovieSync/WeMovieSync.Infrastructure/WeMovieSync.Infrastructure.csproj
+++ b/WeMovieSync/WeMovieSync.Infrastructure/WeMovieSync.Infrastructure.csproj
@@ -21,6 +21,8 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.2" />
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.15.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.15.0" />
+    <PackageReference Include="Npgsql" Version="8.0.8" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
   </ItemGroup>
 
