--- a/WeMovieSync/WeMovieSync.Infrastructure/WeMovieSync.Infrastructure.csproj
+++ b/WeMovieSync/WeMovieSync.Infrastructure/WeMovieSync.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="ErrorOr" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.18" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.17">
@@ -29,6 +30,10 @@
   <ItemGroup>
     <ProjectReference Include="..\WeMovieSync.Application\WeMovieSync.Application.csproj" />
     <ProjectReference Include="..\WeMovieSync.Core\WeMovieSync.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
